# Tic-Tac-Toe

./: CMakeLists.txt  README.md  dependencies.sh  dependencies_fedora.sh  dependencies_ubuntu.sh  game.h  logic.c  main.c  rendering.c  run.sh  script.sh  script_fedora.sh
lib/cmake/: CMakeLists.txt
src/: logic.c  main.c  rendering.c
